# TeamSpeak-3-Telegram-Watchdog

./: CMakeLists.txt
.github/workflows/: compile.yml
deploy/: package.ini
src/: WebComm.cpp  WebComm.h  config.cpp  config.h  configui.ui  definitions.h  plugin.cpp
